**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.16 beta
------------------------
  - Enhancement  #113 Single series pages. If the mjb.singleSeriesPage=true the separate season index is generated for each series.
  - Enhancement  #171 View & download internet movie trailers
  - Fixed defect #332 International characters from NFO
  - Fixed defect #383 UTF-8 Encoding for Movie object - Allows extended character sets in the movie details
  - Enhancement  #418 Option to exclude files without external subtitles
  - Enhancement  #421 Plugin for Swedish movie database filmdelta.se
  - Fixed defect #422 Encoding problems with link of accentuated categories or two words categories on Categories.html
  - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
  - Enhancement  #437 Improvements to multi-episode file support.
  - Enhancement  #442 Added proxy support
  - Enhancement  #444 New plugin to retrieve movie data from Russian movie database www.kinopoisk.ru
  - Fixed defect #449 Trailers are not excluded from the Year categories
  - Fixed defect #450 Percentage (%) in movie details causes error
  - Fixed defect #451 Allocine Plugin didn't work anymore
  - Fixed defeсt #454 Use full float value for FPS
  - Fixed defect #468 Accentuated character with allocine plugin no more correctly dispalyed with version beta 700
  - Fixed defect #476 XBMC NFO movie xml encoding is ignored
  - Fixed defect #479 XML <releaseDate> not correct with allocine Plugin
  - Fixed defect #480 AppleTrailerPlugin uses a charset not universally supported
  - Fixed defect #483 The rating is the same as top250 when using nfo file
  - Fixed defect #484 WebBrowser charset detection error
  - Fixed defect #485 Update for Kinopoisk plugin that allows you to specify IMDB movie URL in .nfo
  - Enhancement  #492 Updates for Sratim plugin and the Hebrew skin