@@ -1,4 +1,4 @@
-**************************************************************
+﻿**************************************************************
 ** MovieJukebox Release note
 ***************************************************************
 
@@ -37,6 +37,7 @@ MovieJukebox 1.0.16 beta
                         5) rating precision
                         6) not to overwrite XBMC NFO data
   - Fixed defect #511 Sending cookies to subdomains
+  - Fixed defect #514 Episode plots not loaded for files with episode titles.
 
 MovieJukebox 1.0.15 beta
 ------------------------
